css/main.css
/* ... */
@font-face {
  font-family: "Gilroy";
  src: url("../fonts/Gilroy-Regular.woff2") format("woff2"), url("../fonts/Gilroy-Regular.woff") format("woff");
  font-weight: 400;
  font-display: swap;
  font-style: normal;
}

@font-face {
  font-family: "Gilroy";
  src: url("../fonts/Gilroy-Bold.woff2") format("woff2"), url("../fonts/Gilroy-Bold.woff") format("woff");
  font-weight: 700;
  font-display: swap;
  font-style: normal;
}

@font-face {
  font-family: "gwa-icons";
  src: url("../fonts/gwa-icons.eot?61hfrd");
  src: url("../fonts/gwa-icons.eot?61hfrd#iefix") format("embedded-opentype"), url("../fonts/gwa-icons.ttf?61hfrd") format("truetype"), url("../fonts/gwa-icons.woff?61hfrd") format("woff"), url("../fonts/gwa-icons.svg?61hfrd#gwa-icons") format("svg");
  font-weight: normal;
  font-style: normal;
  font-display: block;
}

[class^="icon-"],
[class*=" icon-"] {
  font-family: "gwa-icons" !important;
  speak: never;
  font-style: normal;
  font-weight: normal;
  font-variant: normal;
  text-transform: none;
  line-height: 1;
  -webkit-font-smoothing: antialiased;
  -moz-osx-font-smoothing: grayscale;
}

.icon-made-heart:before {
  content: "";
}

.icon-arrow-right:before {
  content: "";
}

.icon-plus:before {
  content: "";
}

html {
  line-height: 1.15;
  -webkit-text-size-adjust: 100%;
}

body {
  margin: 0;
}

main {
  display: block;
}

h1 {
  font-size: 2em;
  margin: 0.67em 0;
}

hr {
  -webkit-box-sizing: content-box;
  box-sizing: content-box;
  height: 0;
  overflow: visible;
}

pre {
  font: 1em monospace, monospace;
}

a {
  background: transparent;
}

abbr[title] {
  border-bottom: none;
  text-decoration: underline;
  -webkit-text-decoration: underline dotted;
  text-decoration: underline dotted;
}

b,
strong {
  font-weight: bolder;
}

code,
kbd,
samp {
  font: 1em monospace, monospace;
}

small {
  font-size: 80%;
}

sub,
sup {
  font-size: 75%;
  line-height: 0;
  position: relative;
  vertical-align: baseline;
}

sub {
  bottom: -0.25em;
}

sup {
  top: -0.5em;
}

img {
  border-style: none;
}

button,
input,
optgroup,
select,
textarea {
  font: 100%/1.15 inherit;
  margin: 0;
}

button,
input {
  overflow: visible;
}

button,
select {
  text-transform: none;
}

button,
[type="button"],
[type="reset"],
[type="submit"] {
  -webkit-appearance: button;
}

button::-moz-focus-inner,
[type="button"]::-moz-focus-inner,
[type="reset"]::-moz-focus-inner,
[type="submit"]::-moz-focus-inner {
  border-style: none;
  padding: 0;
}

button:-moz-focusring,
[type="button"]:-moz-focusring,
[type="reset"]:-moz-focusring,
[type="submit"]:-moz-focusring {
  outline: 1px dotted ButtonText;
}

fieldset {
  padding: 0.35em 0.75em 0.625em;
}

legend {
  -webkit-box-sizing: border-box;
  box-sizing: border-box;
  color: inherit;
  display: table;
  max-width: 100%;
  padding: 0;
  white-space: normal;
}

progress {
  vertical-align: baseline;
}

textarea {
  overflow: auto;
}

[type="checkbox"],
[type="radio"] {
  -webkit-box-sizing: border-box;
  box-sizing: border-box;
  padding: 0;
}

[type="number"]::-webkit-inner-spin-button,
[type="number"]::-webkit-outer-spin-button {
  height: auto;
}

[type="search"] {
  -webkit-appearance: textfield;
  outline-offset: -2px;
}

[type="search"]::-webkit-search-decoration {
  -webkit-appearance: none;
}

::-webkit-file-upload-button {
  -webkit-appearance: button;
  font: inherit;
}

details {
  display: block;
}

summary {
  display: list-item;
}

template {
  display: none;
}

[hidden] {
  display: none;
}

html {
  -webkit-box-sizing: border-box;
  box-sizing: border-box;
}

*,
*::before,
*::after {
  -webkit-box-sizing: border-box;
  box-sizing: border-box;
}

body {
  background: #ffffff;
  margin: 0;
  font-family: "Gilroy", sans-serif;
  border: 20px solid #D4B982;
}

h1,
h2,
h3,
h4,
h5,
h6,
p,
ul {
  margin: 0;
  padding: 0;
}

img {
  max-width: 100%;
}

input,
button,
textarea {
  font-family: inherit;
}

ul {
  list-style: none;
  padding: 0;
}

button {
  border: none;
  background: transparent;
  cursor: pointer;
  padding: 0;
}

.mobile-visible {
  display: none;
}

.js-lock {
  overflow: hidden;
}

.container {
  max-width: 1440px;
  width: 100%;
  margin: 0 auto;
  padding: 0 36px;
}

h1 {
  color: #5C5C5C;
  font-size: 92px;
  font-weight: 700;
  line-height: 1.2;
  text-transform: uppercase;
}

h1 span {
  color: #D4B982;
}

h2 {
  color: #5C5C5C;
  font-size: 82px;
  font-weight: 700;
  line-height: 1.2;
  text-transform: uppercase;
}

h2 span {
  color: #D4B982;
}

h4 {
  color: #292620;
  font-size: 42px;
  font-weight: 400;
  line-height: 1.2;
}

h5 {
  color: #292620;
  font-size: 28px;
  font-weight: 700;
  line-height: 1.5;
}

.s-subtitle {
  display: block;
  color: #5C5C5C;
  font-size: 42px;
  font-weight: 700;
  line-height: 1.2;
  text-transform: uppercase;
}

.s-description {
  color: #292620;
  font-size: 20px;
  font-weight: 400;
  line-height: 1.7;
}

.link-primary {
  display: -webkit-box;
  display: -ms-flexbox;
  display: flex;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  -webkit-box-pack: start;
  -ms-flex-pack: start;
  justify-content: flex-start;
  width: -webkit-fit-content;
  width: -moz-fit-content;
  width: fit-content;
  text-decoration: none;
  color: #D4B982;
  font-size: 20px;
  font-weight: 700;
  line-height: 1;
}

.link-primary i {
  margin-left: 20px;
  -webkit-transition: all 0.3s ease-in-out;
  -o-transition: all 0.3s ease-in-out;
  transition: all 0.3s ease-in-out;
}

.link-primary:hover i {
  -webkit-transform: translateX(10px);
  -ms-transform: translateX(10px);
  transform: translateX(10px);
}

.btn-primary {
  padding: 12px 24px;
  background: #D4B982;
  border: 1px solid #D4B982;
  border-radius: 8px;
  -webkit-transition: all 0.3s ease-in-out;
  -o-transition: all 0.3s ease-in-out;
  transition: all 0.3s ease-in-out;
}
/* ... */

